# Tokeniza.Web3

.next/: trace
tokeniza.web3/: .gitignore  CONTRIBUTING.md  CORRECAO_ERRO_ATIVACAO_CONTA.md  CORRECAO_ERRO_CHECKSUM.md  CORRECAO_ERRO_FORMATACAO.md  CORRECAO_MISSING_REVERT_DATA.md  DEPLOY_GUIDE.md  IMPLEMENTACAO_COBRANCA_REAL.md  INVESTIGACAO_TRANSACOES_NAO_RECEBIDAS.md  LICENSE  MELHORIAS_METAMASK.md  MELHORIAS_ZKSYNC_PRIORIZACAO.md  PaymentReceiver.sol  README.md  TESTE_COBRANCA_REAL.md  TESTE_METAMASK_DETALHADO.md  TESTE_PRODUCAO.md  TESTE_SINCRONIZACAO_CONTAS.md  VALIDACAO_RECEBIMENTO_TAXAS.md  debug-transferencia-eoa.js  debug-transferencia.js  deploy-fixed.ps1  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  guia-teste-contratos.md  investigar-transacoes.js  netlify.toml  tokenizacao_pesquisa.md  vercel.json
tokeniza.web3/docs/: Guia_Producao_Tokenizacao.md
tokeniza.web3/tokenizacao-app/: check-wallet-balance.js  deteccao-ambiente.md  foundry-integration.md
tokeniza.web3/tokenizacao-app/backend/: .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
tokeniza.web3/tokenizacao-app/backend/src/: main.rs
tokeniza.web3/tokenizacao-app/backend/src/api/: assets.rs  blockchain.rs  marketplace.rs  mod.rs  waitlist.rs
tokeniza.web3/tokenizacao-app/backend/src/config/: mod.rs
tokeniza.web3/tokenizacao-app/backend/src/handlers/: error.rs  response.rs
tokeniza.web3/tokenizacao-app/backend/src/models/: asset.rs  marketplace.rs  mod.rs  waitlist.rs
tokeniza.web3/tokenizacao-app/backend/src/services/: blockchain.rs
(+97 files in other folders)
